--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-signalr",
-  "version": "6.1.2",
+  "version": "6.1.3",
   "description": "angular2 signalr library",
   "main": "bundles/ng2-signalr.umd.js",
   "module": "index.js",
@@ -81,5 +81,7 @@
     "webpack": "2.2.1",
     "zone.js": "0.8.29"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@aspnet/signalr": "^1.1.4"
+  }
 }
